调整响应式

--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -233,7 +233,7 @@
     <!-- BIUT生态成员 -->
     <section class="foot-members">
       <section class="container-fisrt"></section>
-      <section class="container">
+      <section class="container" id="member">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-members">BIUT生态成员</h3>
           <figure id="openMask">
@@ -271,7 +271,7 @@
               <img src="../images/about/maskHead.png" id="maskHead" alt="">
               <figcaption>
                 <span data-locale="a-mask-name">昵称</span>
-                <span id="maskName">张智超</span>
+                <span id="maskName"></span>
               </figcaption>
             </figure>
             <p class="mask-txt1" data-locale="a-mask-txt2">上榜理由</p>
