--- a/webapp/pages/dynamic.html
+++ b/webapp/pages/dynamic.html
@@ -102,33 +102,19 @@
     <!-- swiper 轮播图 -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
-        <div class="swiper-slide" style="background: #3F4156">
-          <div class="title" data-swiper-parallax="-100">Slide 1</div>
+        <div class="swiper-slide swiper-slide1"></div>
+        <div class="swiper-slide swiper-slide2"></div>
+        <div class="swiper-slide swiper-slide3">
+          <!-- <div class="title" data-swiper-parallax="-100">Slide 3</div>
           <div class="text" data-swiper-parallax="-300">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus
               feugiat non eros quis feugiat.</p>
-          </div>
-        </div>
-        <div class="swiper-slide" style="background: #59DCB4">
-          <div class="title" data-swiper-parallax="-100">Slide 2</div>
-          <div class="text" data-swiper-parallax="-300">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus
-              feugiat non eros quis feugiat.</p>
-          </div>
-        </div>
-        <div class="swiper-slide" style="background: #000">
-          <div class="title" data-swiper-parallax="-100">Slide 3</div>
-          <div class="text" data-swiper-parallax="-300">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus
-              feugiat non eros quis feugiat.</p>
-          </div>
+          </div> -->
+          <!-- <img src="../images/dynamic/swiperBg3.png" alt=""> -->
         </div>
       </div>
       <!-- Add Pagination -->
       <div class="swiper-pagination swiper-pagination-white"></div>
-      <!-- Add Navigation -->
-      <div class="swiper-button-prev swiper-button-white"></div>
-      <div class="swiper-button-next swiper-button-white"></div>
     </div>
 
   </main>
@@ -172,7 +158,6 @@
             </section>
           </section>
         </article>
-
       </section>
     </main>
   </main>
