--- a/webapp/pages/register.html
+++ b/webapp/pages/register.html
@@ -109,11 +109,6 @@
         </figure>
         <input type="text" data-placeholder="r-phone" id="regPhone" maxlength="11" autocomplete="off" />
         <img src="../images/login/tipsImg.png" alt="" class="error-img">
-        <section style="display: none">
-          <ul>
-            <li>1</li>
-          </ul>
-        </section>
       </section>
       <p class="error-txt" id="phoneError" data-locale="r-phone-error"></p>
 
@@ -130,7 +125,7 @@
       <p class="error-txt" id="nameError" data-locale="r-name-error"></p>
 
       <!-- 密码 -->
-      <input type="text" class="public-ipt public-margin" id="regPass" data-placeholder="r-pass" maxlength="30" />
+      <input type="password" class="public-ipt public-margin" id="regPass" data-placeholder="r-pass" maxlength="30" />
       <p class="error-txt" id="passError" data-locale="r-pass-error"></p>
 
       <button type="button" class="reg-btn public-btn" id="submitReg" data-locale="r-btn">确认注册</button>
