--- a/webapp/index.html
+++ b/webapp/index.html
@@ -77,7 +77,7 @@
           <a href="./pages/about.html" data-locale="nav-about">About</a>
         </li>
         <li>
-          <a href="./pages/dynamic.html" target="_blank" data-locale="nav-dynamic">Dynamic</a>
+          <a href="./pages/dynamic.html" data-locale="nav-dynamic">Dynamic</a>
         </li>
         <li>
           <a href="./pages/dapp.html" data-locale="nav-dapp">DApp</a>
@@ -300,7 +300,7 @@
   <main class="container-footer scrollContent">
     <section class="container">
       <!-- New dynamics -->
-      <section class="new-dynamics">
+      <section class="new-dynamics index-news">
         <!-- 功能 子导航栏 -->
         <article class="public-title">
           <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New dynamics</h3>
