--- a/webapp/pages/login.html
+++ b/webapp/pages/login.html
@@ -107,8 +107,8 @@
       <p class="error-txt" id="loginError" data-locale="l-login-error"></p>
       <button type="button" id="submitLogin" class="public-btn login-btn" data-locale="l-btn">确认登陆</button>
       <section class="create-list">
-        <a href="register.html" class="public-btn" data-locale="l-register">没有账户？创建一个！</a>
-        <a href="updateName.html" class="public-btn" data-locale="l-update">忘记用户名</a>
+        <a href="register.html" class="public-btn" data-locale="l-register">Create Account</a>
+        <a href="updateName.html" class="public-btn" data-locale="l-update">Forgot username</a>
       </section>
     </section>
 
@@ -123,18 +123,10 @@
         </figure>
         <input type="text" data-placeholder="r-phone" id="confirmPhone" autocomplete="off" maxlength="11" />
         <img src="../images/login/tipsImg.png" alt="" class="error-img" id="phoneErrorImg" />
-        <section style="display: none">
-          <ul>
-            <li>1</li>
-          </ul>
-        </section>
       </section>
       <section class="error-content">
-        <span data-locale="l-error-txt1">此电话号码看起来不正确，请检查国家/地区代码和电话号码</span>
-        <section>
-          <sapn data-locale="l-error-txt2">该账户不存在，请输入其它账户或 </sapn>
-          <a href="register.html" class="public-blur" data-locale="l-error-txt3">获取新账户</a>
-        </section>
+        <span data-locale="l-error-txt1"></span>
+        <a href="register.html" class="public-blur" data-locale="l-error-txt2">获取新账户</a>
       </section>
       <section class="public-btn-list">
         <button type="button" class="public-btn" data-locale="u-prev-btn">上一步</button>
@@ -144,8 +136,8 @@
 
     <!-- 验证码验证码 -->
     <section class="code-content public-cnt">
-      <h2>确认验证码</h2>
-      <p class="send">已向账户发送验证码，10分钟内输入有效</p>
+      <h2 data-locale="l-code-tit">确认验证码</h2>
+      <p class="send" data-locale="l-code-txt">已向账户发送验证码，10分钟内输入有效</p>
       <!-- 验证码 -->
       <section class="public-flex-list code-list public-margin">
         <input type="text" data-placeholder="r-code" id="code" maxlength="6" autocomplete="off" />
@@ -166,7 +158,7 @@
         <span id="loginName">1212</span>
       </section>
       <!-- 密码 -->
-      <input type="text" class="public-ipt" id="pass" data-placeholder="r-pass" maxlength="30" />
+      <input type="password" class="public-ipt" id="pass" data-placeholder="r-pass" maxlength="30" />
       <p class="error-txt" id="passError" data-locale="r-pass-error"></p>
 
       <button type="button" id="confirmLogin" class="public-btn login-btn" data-locale="l-btn">确认登陆</button>
