调整网页内容

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -146,7 +146,7 @@
           <!-- 功能 子导航栏 -->
           <article class="public-title">
             <h3 data-locale="h-proj-tit" class="wow titanimate" data-wow-delay=".5s">About the project</h3>
-            <figure id="projectMore">
+            <figure id="projectMore" class="wow titanimate" data-wow-delay=".75s">
               <figcaption data-locale="more">
                 understand more
               </figcaption>
@@ -304,7 +304,7 @@
         <!-- 功能 子导航栏 -->
         <article class="public-title">
           <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New dynamics</h3>
-          <figure id="newsMore">
+          <figure id="newsMore" class="wow titanimate" data-wow-delay=".75s">
             <figcaption data-locale="more">
               understand more
             </figcaption>
@@ -395,7 +395,6 @@
             <span>
               <span id="idxCurrent"></span>
             </span>
-
             <!-- <span>
                 <span id="idxCurrent"></span>
                 <span>l</span>
