--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -236,7 +236,7 @@
       <section class="container" id="member">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-members">BIUT生态成员</h3>
-          <figure id="openMask">
+          <figure id="openMask" class="wow titanimate" data-wow-delay=".75s">
             <figcaption data-locale="a-members-txt1">
               我也要榜上有名
             </figcaption>
@@ -293,7 +293,7 @@
       <section class="foot-history">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-time">项目进展和发展计划</h3>
-          <figure id="lookTime">
+          <figure id="lookTime"  class="wow titanimate" data-wow-delay=".75s">
             <figcaption data-locale="more">
               了解更多
             </figcaption>
