--- a/webapp/pages/center.html
+++ b/webapp/pages/center.html
@@ -108,11 +108,11 @@
           </ul>
 
           <ul class="left-list2" id="dataNavList">
-            <li class="active-list">
+            <li>
               <img src="../images/index/nav-check.png" alt="">
               <span data-locale="c-left-txt1">账户中心</span>
             </li>
-            <li>
+            <li class="active-list">
               <img src="../images/index/nav-check.png" alt="">
               <span data-locale="c-left-txt2">基本资料</span>
             </li>
@@ -333,7 +333,7 @@
                   </figure>
                   <span data-locale="c-base-kyc">KYC验证</span>
                   <span class="basis-pading public-white" data-locale="c-basis-txt">用于提升账号的安全性和信任级别。</span>
-                  <a href="confirmPhoto.html" class="public-blur" data-locale="c-base-look">查看</a>
+                  <a href="confirmPhoto.html?id=4" class="public-blur" data-locale="c-base-look">查看</a>
                 </section>
               </li>
 
@@ -348,7 +348,7 @@
                   </figure>
                   <span data-locale="c-base-kyc">KYC验证</span>
                   <span class="basis-pading public-white" data-locale="c-basis-txt">用于提升账号的安全性和信任级别。</span>
-                  <a href="confirmPhoto.html" class="public-blur" data-locale="c-base-going">重新校验</a>
+                  <a href="confirmPhoto.html?id=1" class="public-blur" data-locale="c-base-going">重新校验</a>
                 </section>
               </li>
 
@@ -363,7 +363,7 @@
                   </figure>
                   <span data-locale="c-base-kyc">KYC验证</span>
                   <span class="basis-pading public-white" data-locale="c-basis-txt">用于提升账号的安全性和信任级别。</span>
-                  <a href="confirmPhoto.html" class="public-blur" data-locale="c-base-look">查看</a>
+                  <a href="confirmPhoto.html?id=2" class="public-blur" data-locale="c-base-look">查看</a>
                 </section>
               </li>
 
@@ -378,7 +378,7 @@
                   </figure>
                   <span data-locale="c-base-kyc">KYC验证</span>
                   <span class="basis-pading public-white" data-locale="c-basis-txt">用于提升账号的安全性和信任级别。</span>
-                  <a href="confirmPhoto.html" class="public-blur" data-locale="c-base-gos">校验</a>
+                  <a href="confirmPhoto.html?id=3" class="public-blur" data-locale="c-base-gos">校验</a>
                 </section>
               </li>
             </ul>
