--- a/webapp/pages/dapp.html
+++ b/webapp/pages/dapp.html
@@ -108,11 +108,11 @@
 
       <section id="downApp">
         <section class="dapp-down">
-          <a href="">
+          <a href="#" id="download-win">
             <img src="../images/dapp/windows.png" alt="">
             <span>Windows</span>
           </a>
-          <a href="">
+          <a href="#" id="download-mac">
             <img src="../images/dapp/mac.png" alt="">
             <span>Mac OS</span>
           </a>
