--- a/webapp/pages/dynamic.html
+++ b/webapp/pages/dynamic.html
@@ -170,22 +170,8 @@
         <article class="public-title">
           <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New dynamics</h3>
         </article>
-        <ul>
-          <li>
-            <section class="foot-news-tit">
-              <h4>区块链落地应用|区块链+金融天然已落地</h4>
-              <time>24 hours ago</time>
-            </section>
-            <p class="foot-news-txt">对游戏玩家来说，无论是团队FPS、MOBA竞技还是生存类游戏，稳定、低延迟是获胜的关键。</p>
-          </li>
-
-          <li>
-            <section class="foot-news-tit">
-              <h4>区块链落地应用|区块链+金融天然已落地</h4>
-              <time>24 hours ago</time>
-            </section>
-            <p class="foot-news-txt">对游戏玩家来说，无论是团队FPS、MOBA竞技还是生存类游戏，稳定、低延迟是获胜的关键。</p>
-          </li>
+        <ul id="footNewsList">
+          
         </ul>
 
         <section class="foot-news-more">
