--- a/webapp/pages/updatePass.html
+++ b/webapp/pages/updatePass.html
@@ -99,28 +99,29 @@
   <main class="public-container">
     <!-- 重置密码 -->
     <section class="pass-content public-cnt">
-      <h2 data-locale="up-txt">重置密码</h2>
-      <p data-locale="up-tit">我们可以帮助你重置密码和安全信息。首先，请输入你的BIUT 帐户，然后按照下面的说明操作。</p>
+      <h2 data-locale="up-tit">重置密码</h2>
+      <p data-locale="up-txt">我们可以帮助你重置密码和安全信息。首先，请输入你的BIUT 帐户，然后按照下面的说明操作。</p>
       <section class="public-flex-list phone-list">
         <figure>
           <img src="../images/login/china.png" alt="">
           <img src="../images/login/checkDown.png" alt="">
         </figure>
-        <input type="text" data-placeholder="r-phone" />
+        <input type="text" data-placeholder="r-phone" id="phone" autocomplete="off" maxlength="11"/>
         <img src="../images/login/tipsImg.png" alt="" class="error-img">
         
       </section>
 
       <section class="public-flex-list code-list public-margin">
-        <input type="text" data-placeholder="r-code" />
-        <button type="button" data-locale="r-get-code">点击获取</button>
+        <input type="text" data-placeholder="r-code" id="code" maxlength="6"/>
+        <button type="button" id="getCode" data-locale="r-get-code">点击获取</button>
       </section>
 
       <input type="text" class="public-ipt public-margin" data-placeholder="r-pass" />
+      <p class="error-txt" id="passError" data-locale="r-pass-error"></p>
 
       <section class="public-btn-list">
-        <button type="button" class="public-btn" data-locale="u-prev-btn">上一步</button>
-        <button type="button" class="public-btn" data-locale="u-next-btn">下一步</button>
+        <button type="button" class="public-btn" id="" data-locale="u-prev-btn">上一步</button>
+        <button type="button" class="public-btn" id="" data-locale="u-next-btn">下一步</button>
       </section>
     </section>
 
@@ -131,9 +132,9 @@
         <img src="../images/successImg.png" alt="">
       </section>
       <p>
-        <span data-locale="">已重置账户</span>
-        <span>12312345678</span>
-        <span data-locale="">的密码</span>
+        <span data-locale="up-success-txt1">已重置账户</span>
+        <span id="">12312345678</span>
+        <span data-locale="up-success-txt2">的密码</span>
       </p>
       <button type="button" class="public-btn" data-locale="r-go-login">去登录</button>
     </section>
