新闻分页 加载更多

--- a/webapp/pages/dynamic.html
+++ b/webapp/pages/dynamic.html
@@ -176,7 +176,7 @@
 
         <section class="foot-news-more">
           <figure id="newsMore">
-            <figcaption>understand more</figcaption>
+            <figcaption data-locale="moreNews">read more news</figcaption>
             <img data-original="../images/index/more.png" alt="BIUT-more" title="more">
           </figure>
         </section>
